--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/image_view_flag"
-        android:layout_width="50dp"
-        android:layout_height="70dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_launcher_background" />
 
     <TextView
@@ -17,11 +17,11 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/image_view_flag"
         android:layout_alignParentTop="true"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
         android:layout_toEndOf="@+id/image_view_flag"
         android:gravity="center"
         android:text="India"
         android:textColor="@android:color/black"
-        android:textSize="30sp" />
+        android:textSize="18sp" />
 
 </RelativeLayout>
